--- a/VSpython/pythonfunction/requirements.txt
+++ b/VSpython/pythonfunction/requirements.txt
@@ -1,2 +1,7 @@
-azure-functions==1.18.0
-azure-functions-worker==1.0.0
+azure-functions>=1.18.0
+azure-functions-worker>=1.0.0
+azure-storage-queue>=12.9.0
+azure-data-tables>=12.4.0
+bcrypt>=4.0.1
+python-dateutil>=2.8.2
+pydantic>=2.5.0uuid
